--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        button
+    </a>
 </body>
 </html>
